# ProcessManagerModule

./: CMakeLists.txt  README.md
Dockerfiles/: CMakeLists.txt  Dockerfile  Dockerfile.ubuntu.in
Protocols/: CMakeLists.txt
Source/: CMakeLists.txt
Source/include/: ApplicationDetails.hpp  Communication.hpp  Event.hpp  EventManager.hpp  Logging.hpp  ModuleBase.hpp  ModuleConfiguration.hpp  ModuleConfigurationReader.hpp  ModuleConnection.hpp  ModuleConnectionManager.hpp  ModuleEventsCache.hpp  ModuleGlobals.hpp  ModuleManager.hpp  ModuleMessageMakers.hpp  ModuleRegistrationState.hpp  ModuleResponseConnectHandler.hpp  ModuleResponseHandler.hpp  ModuleResponsePingHandler.hpp  ModuleResponseReconnectHandler.hpp  ModuleServer.hpp  ModuleSettings.hpp  ModuleTimersManager.hpp  ModuleUserProcess.hpp  ModuleWatchdogConnectionState.hpp  MongoDbEnvironment.hpp  MongoServicesCollection.hpp  Timer.hpp  TimersCache.hpp  TimersThreadMain.h
Source/src/: ApplicationDetails.cpp  EventManager.cpp  ModuleBase.cpp  ModuleConfiguration.cpp  ModuleConfigurationReader.cpp  ModuleConnection.cpp  ModuleConnectionManager.cpp  ModuleEventsCache.cpp  ModuleGlobals.cpp  ModuleMain.cpp  ModuleManager.cpp  ModuleMessageMakers.cpp  ModuleResponseConnectHandler.cpp  ModuleResponsePingHandler.cpp  ModuleResponseReconnectHandler.cpp  ModuleServer.cpp  ModuleSettings.cpp  ModuleTimersManager.cpp  ModuleWatchdogConnectionState.cpp  MongoServicesCollection.cpp  Timer.cpp  TimersCache.cpp  TimersThreadMain.cpp
Tests/: CMakeLists.txt
Tests/ExampleModuleTests/: CMakeLists.txt
Tests/ExampleModuleTests/ExampleModuleOne/: CMakeLists.txt  ModuleOneTestTask.cpp
Tests/ExampleModuleTests/ExampleSubscribingModule/: CMakeLists.txt  GpsCoordinatesCache.hpp  GpsMobilesMap.cpp  GpsMobilesMap.hpp  ModuleTwoTestTask.cpp
Tests/ModuleServerTests/: CMakeLists.txt  ModuleServerTests.cpp
Tests/ModuleWatchdogMessageHandlersTests/: CMakeLists.txt  ModuleResponseConnectHandlerTest.cpp  ModuleResponsePingHandlerTest.cpp
